--- a/style.css
+++ b/style.css
@@ -39,15 +39,28 @@
   }
   
   ul {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
     list-style: none;
     font-size: 1.1rem;
     line-height: 1.6; 
-    padding: 5px 20px;
+    padding: 10px 5px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: var(--border-radius);
     box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 15vh;
   }
-  ul li {
+  li{
+    border: 1px solid yellow;
+    border-radius: 8px;
+    padding: 8px;
+  }
+  ul{
     margin-bottom: 8px;
   }
   ul li:last-child {
